[gd_scene load_steps=4 format=3 uid="uid://b1xvduw1f032y"]

[ext_resource type="Script" uid="uid://bnxftib2aj2df" path="res://ui/upgrade_shop/upgrade_shop_item/upgrade_shop_item.gd" id="1_p4fgh"]
[ext_resource type="Texture2D" uid="uid://6qna05lrjfyj" path="res://ui/player_hud/art/temp_hennifer_headshot.png" id="2_lwutu"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_q4qen"]
load_path = "res://.godot/imported/prosperity_egg_icon.png-364a70c39e0b598fd490a1a5f7f25042.ctex"

[node name="UpgradeShopItem" type="PanelContainer"]
process_mode = 3
offset_right = 175.0
offset_bottom = 250.0
script = ExtResource("1_p4fgh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="ItemIcon" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_lwutu")
expand_mode = 5
stretch_mode = 5

[node name="NameLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(155, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2
theme_type_variation = &"RichtItemTitle"
bbcode_enabled = true
text = "Name"
fit_content = true
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(155, 0)
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="CurrencyIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
texture = SubResource("CompressedTexture2D_q4qen")
expand_mode = 3
stretch_mode = 5

[node name="CostLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"ItemCost"
text = "150"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
